# transfer_archivos

./: .coveragerc  .cruft.json  .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml  ruff.toml  {{cookiecutter.project_slug}}.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py
tests/unit/: __init__.py  conftest.py  test_version.py
{{cookiecutter.package_name}}/: __init__.py  __main__.py
