[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_description}}"
authors = ["Alexion Pharmaceuticals Inc. <mail@alexion.com>"]
packages = [{include = "{{cookiecutter.package_name}}"}]

license = "Propietary"

keywords = [""]

repository = "{{cookiecutter.repository_url}}"

readme = ["README.md", "RELEASE_NOTES.md"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English"
]

include = ["{{cookiecutter.package_name}}/*"]
exclude = ["tests/*"]

[tool.poetry.dependencies]
click = ">=8"
loguru = ">=0.6,<1.0"
python = "~3.11"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "24.4.0"}
coverage = ">=6.4.3"
cruft = ">=2.12.0"
docformatter = "1.7.5"
GitPython = ">=3.1.27"
jupyterlab = ">=3.2.5"
jupytext = ">=1.13.7"
jupyter_contrib_nbextensions = ">=0.5.1"
myst-parser = ">=0.18.1"
nbsphinx = "^0.9.2"
pre-commit = ">=2.20.0"
pydata-sphinx-theme = ">=0.14.0"
pytest = ">=7.2.0"
pytest-cov = ">=3.0.0"
pytest-mock = ">=1.7.1,<4.0"
pytest-runner = ">=6.0.0"
python-dotenv = ">=0.20.0"
pyupgrade = "3.15.2"
ruff = "0.3.7"
sphinx = ">=5.3.0"
sphinx-autodoc-typehints = ">=1.21.1"
sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.package_name}}.__main__:_main"
